assignments/A02/style.css
/* ... */
.footer-caution {
    max-width: 1060px;
    border-top: 2px solid rgba(255, 255, 255, 0.1);
    margin: 0 auto;
    padding: 35px 0px;
}

.footer-caution > p {
    font-size: 20px;
    text-align: center;
    color: rgba(255, 255, 255, 0.5);
}

/* MOBILE SCREEN */
/* ----------------------------------- */
/* MOBILE SCREEN */
/* ----------------------------------- */
/* MOBILE SCREEN */
/* ----------------------------------- */



@media screen and (max-width: 576px) {
    .header {
        height: 1136px;
        /* newly added */
    }

    .navbar {
        max-width: 353px;
    }

    .nav-menu {
        display: none;
    }

    .navbar .menu {
        display: inline;
        color: white;
        padding-right: 5px;
    }

    .header-container {
        max-width: 352px;
        margin: 0 auto;

        display: grid;
        grid-template-columns: repeat(1, 1fr);
        justify-content: center;
        align-items: center;
    }

    .header-content {
        max-width: 352px;
        margin-bottom: 64px;
    }

    .header-content > h1 {
        font-size: 36px;
        max-width: 285px;
    }

    .header-content > p {
        max-width: 276px;
    }

    .header-content .shape {
        font-size: 76px;
    }

    .header-content .club {
        display: none;
    }

    .header-content .btn-join {
        max-width: 169px;
    }

    .header-content .btn-download {
        max-width: 169px;
        padding: 16px 20px 16px 20px;
    }

    /* tutorial */

    .box-circle {
        width: 30px;
        height: 30px;
    }

    .fa-caret-right {
        transform: translate(8px, 15px);
    }

    .tutorial-content > h3 {
        font-size: 18.14px;
    }

    .tutorial-content > p {
        font-size: 12.1px;
    }

    .box-tutorial {
        height: 72.58px;
        width: 155.74px;
        border-radius: 9.07px;
        backdrop-filter: blur(15.12px);
        border: 0.76px solid rgba(255, 255, 255, 0.1);
        transform: translateX(15px) translateY(-320px);
    }


    /* workout */
    
    .box-workout > h3 {
        font-size: 30.24px;
        margin-top: 10px;
    }

    .box-workout > p {
        font-size: 9.83px;
    }

    .box-workout {
        height: 74.09px;
        width: 145.91px;
        border: 0.76px solid rgba(255, 255, 255, 0.1);
        border-radius: 9.07px;
        backdrop-filter: blur(15.12px);
        transform: translateX(190px) translateY(-410px);
    }


    /* styles of main section */
    /* styles of main section */


    /* change your habits */

    .habit {
        padding-top: 30px;
        /* newly added */
        max-width: 340px;
    }

    .habit-content {
        max-width: 318px;
    }

    .habit-content > h1 {
        font-size: 32px;
    }

    .habit-class {
        flex-direction: column;
        gap: 36px;
    }

    /* run an extra mile easily */

    .run {
        max-width: 353px;
        flex-direction: column;
        justify-content: center;
        gap: 30px;
        padding: 30px 0; 
    }

    .run-content {
        max-width: 287px;
    }

    .run-content > h1 {
        padding-right: 20px;
        font-size: 32px;
    }

    .run .btn-join {
        width: 287px;
    }

    .run > img {
        margin-top: -30px;
        width: 287px;
        height: 170px;
    }

    /* trainings and exercises */

    .training {
        /* margin-top: 100px; */
        max-width: 352px;
    }

    .training-content > h1 {
        font-size: 32px;
    }

    .training-pic3,
    .training-pic6,
    .exc-desc {
        display: none;
    }

    .training-banner-part2 {
        margin-top: -30px;
    }

    .training-pic1 {
        color: white;
    }

    .training-pic1,
    .training-pic2 {
        width: 50%;
        height: 150px;
    }

    .training-pic4 {
        width: 45%;
        height: 150px;
    }

    .training-pic4 > p {
        top: 95px;
        left: 30px;
    }

    .training-pic5 {
        width: 55%;
        height: 150px;
    }

    /* calculate bmi */

    .bmi-content,
    .bmi-divs {
        max-width: 353px;
        margin: 0 auto;
    }

    .bmi-content > h1 {
        font-size: 32px;
    }

    .bmi-divs {
        flex-direction: column;
        gap: 40px;
        padding-bottom: 54px;
    }

    .bmi-chart > h3,
    .bmi-calculator > h3 {
        font-size: 20px;
        padding-bottom: 20px;
        /* added customized code  */
    }

    /* meet our team */

    .team {
        max-width: 353px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .team-content {
        max-width: 309px;
        margin-bottom: 37px;
        margin-top: 30px;
    }

    .team-content > h1 {
        font-size: 32px;
    }

    .md-remove {
        display: none;
    }

    .team-members {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 20px;
    }

    .team-trainer {
        width: 313px;
        height: 272px;
    }


    /* footer part */

    .footer-details,
    .footer-caution {
        max-width: 353px;
    }

    .footer-details,
    .footer-navigation {
        flex-direction: column;
        justify-content: flex-start;
        gap: 20px;
    }

    .footer-navigation {
        justify-content: flex-start;
        align-items: start;
        gap: 40px;
    }

    /* optional for footer */
} 
/* ... */

